Fixed spacing + responsive header centering for team page

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -222,6 +222,10 @@
     .cool_facts_area .col-12:last-of-type .single-cool-fact {
         margin-bottom: 0;
     }
+
+    .member-type {
+        margin: 0 auto;
+    }
 }
 
 @media (min-width: 480px) and (max-width: 767px) {
